@@ -1,8 +1,8 @@
 Package: spatialEco
 Type: Package
 Title: Spatial Analysis and Modelling Utilities
-Version: 1.3-7
-Date: 2021-05-28
+Version: 1.3-8
+Date: 2021-06-11
 Authors@R: c(
   person(family="Evans", given="Jeffrey S.", email = "jeffrey_evans@tnc.org", role = c("aut", "cre")),
   person(family="Murphy", given="Melanie A.", role = "ctb"),			 
